deploy-app/deployments/ex2-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex2-app
  labels:
    app: ex2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ex2-app
  template:
    metadata:
      labels:
        app: ex2-app
    spec:
      containers:
        - image: iulianroman/ex2-app
          imagePullPolicy: Always
          name: ex2-app
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ex2-app-service
spec:
  ports:
      # service port in cluster
    - port: 9000
      # port to contact inside container
      targetPort: 9000
  selector:
    app: ex2-app
