deploy-app/deployments/ex2-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex2-app-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ex2-app.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: ex2-app-service
            servicePort: 9000
